src/test/ui/closures/closure-no-fn-2.stderr
error[E0308]: mismatched types
  --> $DIR/closure-no-fn-2.rs:6:27
   |
LL |     let bar: fn() -> u8 = || { b };
   |              ----------   ^^^^^^^^ expected fn pointer, found closure
   |              |
   |              expected due to this
   |
   = note: expected fn pointer `fn() -> u8`
                 found closure `[closure@$DIR/closure-no-fn-2.rs:6:27: 6:35]`

error: aborting due to previous error

For more information about this error, try `rustc --explain E0308`.
